--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,40 @@
 {
     "name": "tish/laravel-mpesa",
-    "description": "Laravel M-Pesa Lipa Na M-Pesa STK Push integration package",
-    "keywords": ["laravel", "mpesa", "safaricom", "stk-push", "payment"],
+    "description": "Laravel M-Pesa Lipa Na M-Pesa STK Push integration package with automatic callback handling",
+    "keywords": ["laravel", "mpesa", "safaricom", "stk-push", "payment", "kenya"],
+    "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Tish",
+            "email": "tishmalo99@gmail.com"
+        }
+    ],
     "homepage": "https://github.com/tishmalo/laravel-mpesa",
     "support": {
-        "issues": "https://github.com/tishmalo/laravel-mpesa/issues"
+        "issues": "https://github.com/tishmalo/laravel-mpesa/issues",
+        "source": "https://github.com/tishmalo/laravel-mpesa"
     },
     "require": {
         "php": "^8.1",
         "illuminate/support": "^9.0|^10.0|^11.0",
         "guzzlehttp/guzzle": "^7.0"
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "Tish\\LaravelMpesa\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Tish\\LaravelMpesa\\MpesaServiceProvider"
+            ],
+            "aliases": {
+                "Mpesa": "Tish\\LaravelMpesa\\Facades\\Mpesa"
+            }
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
