--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Tish",
-            "email": "tishmalo99@gmail.com"
+            "email": "your.email@example.com"
         }
     ],
     "homepage": "https://github.com/tishmalo/laravel-mpesa",
@@ -16,13 +16,23 @@
         "source": "https://github.com/tishmalo/laravel-mpesa"
     },
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^9.0|^10.0|^11.0",
+        "php": "^8.0|^8.1|^8.2",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "guzzlehttp/guzzle": "^7.0"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
+        "phpunit/phpunit": "^9.0|^10.0",
+        "mockery/mockery": "^1.4"
     },
     "autoload": {
         "psr-4": {
             "Tish\\LaravelMpesa\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tish\\LaravelMpesa\\Tests\\": "tests/"
         }
     },
     "extra": {
